--- a/Projects/Drawing/draw.html
+++ b/Projects/Drawing/draw.html
@@ -74,7 +74,7 @@
                 <!-- oval -->
                 <div class="container clearfix">
                     <div class="oval graph"></div>
-                    <div class="code">
+                    <div class="code" style="height: 24rem;">
                         <p>
                             <span class="class">.oval</span> {<br> height: 24rem;<br> width: 12rem;<br> background-color: #f0daf0;<br> border-radius: 50%;
                             <br> }
