--- a/Projects/Drawing/draw.html
+++ b/Projects/Drawing/draw.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Draw some basic shapes</title>
     <link rel="stylesheet" href="css/shape.css">
 </head>
