--- a/Projects/Drawing/draw.html
+++ b/Projects/Drawing/draw.html
@@ -128,7 +128,9 @@
                 </p>
                 <!-- heart -->
                 <div class="container clearfix">
-                    <div class="heart graph"></div>
+                    <div id="heart-container">
+                        <div class="heart graph"></div>
+                    </div>
                     <div class="code">
                         <p>
                             <span class="class">.heart</span> {<br> margin-top: 30px;<br> position: relative;<br> width: 100px;<br> height: 90px;<br> }
