--- a/Projects/Drawing/draw.html
+++ b/Projects/Drawing/draw.html
@@ -15,9 +15,11 @@
 <body>
     <div class="wrapper">
         <!-- Main Header -->
-        <header class="main-header">
-            <h1>how to create basic shapes with CSS</h1>
-            <p>My CSS Learning Notes</p>
+        <header id="main-header">
+            <div id="main-header-container">
+                <h1>how to create basic shapes with CSS</h1>
+                <p>My CSS Learning Notes</p>
+            </div>
         </header>
 
         <!-- Naviagation bar -->
