--- a/Projects/Drawing/draw.html
+++ b/Projects/Drawing/draw.html
@@ -9,7 +9,6 @@
     <title>Draw some basic shapes</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/shape.css">
-
 </head>
 
 <body>
@@ -182,6 +181,7 @@
 
         </footer>
         <script src="js/button.js"></script>
+        <!-- <script src="js/sticky-nav.js"></script> -->
     </div>
 </body>
 
